files/k8s/nodered/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  ports:
  - port: 1880
    protocol: TCP
    targetPort: 1880
  selector:
    app.kubernetes.io/name: nodered
  type: ClusterIP
